--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "push-ui",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./lib/index.js",
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
+    "@emotion/core": "^11.0.0-next.8",
+    "@emotion/styled": "^11.0.0-next.8",
     "classnames": "^2.2.6",
-    "emotion-theming": "^10.0.19",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -15,15 +14,15 @@
     "react-flatpickr": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-text-mask": "^5.4.3",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-form": "^8.2.4",
     "styled-system": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-info": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
@@ -34,17 +33,18 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.6.2",
-    "babel-plugin-react-docgen": "^3.2.0",
+    "babel-plugin-emotion": "^10.0.27",
+    "babel-plugin-react-docgen": "^4.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "codecov": "^4.0.0-0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.7.2",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-jsdoc": "^18.4.3",
+    "css-loader": "^3.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-jsdoc": "^20.0.0",
     "eslint-plugin-react": "^7.17.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
@@ -52,9 +52,9 @@
     "rimraf": "^3.0.0",
     "sass-loader": "^8.0.0",
     "serve-static": "^1.14.1",
-    "style-loader": "^1.0.1",
+    "style-loader": "^1.1.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
